--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <p class="hero__boost">Boost your productivity and build your mood with a glass of coffee in the
                             morning </p>
                         <div class="hero__menu">
-                            <button class="order">order now <i class="fa-solid fa-cart-shopping"></i> </button>
+                            <button class="order">order now <i class="fa-solid fa-cart-shopping sh"></i> </button>
                             <button class="more">More menu</button>
                         </div>
                     </div>
