--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="header" id="header">
         <div class="container">
             <nav class="navbar">
-                <img src="./images/logo_coffe.svg" alt="logo">
+                <img style="width: 250px;" src="./images/logo_coffe.svg" alt="logo">
                 <ul class="navbar__collection">
                     <li class="navbar__item">
                         <a href="#" class="navbar__link">
