--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
-
 <body>
+   
     <header class="header" id="header">
         <div class="container">
             <nav class="navbar">
@@ -35,7 +35,7 @@
                 </ul>
 <div class="navbar__btns">
     <div class="inp"><i class="fa-solid fa-magnifying-glass"></i><input class="navbar__input" type="text" name="" id="" placeholder="Cappuccino "></div>
-    <button class="navbar__btn"><i class="fa-solid fa-cart-shopping"></i></button>
+  <a href="./royxar.html"><button class="navbar__btn"><i class="fa-solid fa-cart-shopping"></i></button></a>  
 </div>
                 <div class="navbar__menu">
                     <i class="fa-solid fa-bars"></i>
@@ -58,7 +58,7 @@
                         </div>
                     </div>
                     <div class="hero__img">
-                        <img src="./images/img-hero.png" alt="">
+                        <img src="./images/img-hero.png" alt="foto">
                     </div>
                 </div>
             </div>
@@ -88,7 +88,7 @@
                             </div>
                             <div class="popular__content noactiv">
                                 <div class="popular__img">
-                                    <img src="./images/img_product.png" alt="foto">
+                                    <img src="./images/2.png" alt="foto">
                                 </div>
                                 <div class="popular__theme">
                                   <div class="pupular__vanila">
@@ -106,7 +106,7 @@
                             </div>
                             <div class="popular__content activ">
                                 <div class="popular__img">
-                                    <img src="./images/img_product.png" alt="foto">
+                                    <img src="./images/3.png" alt="foto">
                                 </div>
                                 <div class="popular__theme">
                                   <div class="pupular__vanila">
