--- a/pages/product.html
+++ b/pages/product.html
@@ -35,7 +35,7 @@
                 </ul>
 <div class="navbar__btns">
     <div class="inp"><i class="fa-solid fa-magnifying-glass"></i><input class="navbar__input" type="text" name="" id="" placeholder="Cappuccino "></div>
-    <button class="navbar__btn"><i class="fa-solid fa-cart-shopping"></i></button>
+    <a href="/royxar.html"><button class="navbar__btn"><i class="fa-solid fa-cart-shopping"></i></button></a>
 </div>
                 <div class="navbar__menu">
                     <i class="fa-solid fa-bars"></i>
