--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
                         <input class="input" type="text" placeholder="Email address">
                         <button class="button">Order now</button>
                     </div>
+                    <button class="button b">Order now</button>
                 </div>
             </div>
         </div>
